# bet-bot

./: Makefile  README.md  pyproject.toml
.github/workflows/: pull_request.yaml
src/: hello_world_test.py
