[project]
name = "bet-bot"
version = "0.0.1"
description = "Telegram Bot for betting competitions"
authors = [
    {name = "Vitalii Mozin",email = "vitalii.mozin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
